styles.css
* {
  font-family: "Inconsolata", monospace;
  font-size: 18px;
  font-style: italic;
  font-weight: 300;
  /* padding: 2em 4em; */
  /* max-width: 40em; */
  letter-spacing: 0.1em;
  line-height: 1.6em;
  margin: 0;
  padding: 0;
  border: 0;
  vertical-align: baseline;
  text-align: left;
}

.bold {
  font-weight: 600;
}

.body {
  width: 100%;
  height: 100%;
}

.container {
  width: 720px;
  margin: auto;
  margin-top: 26px;
  font-size: 24px;
}

.title {
  margin-bottom: 1rem;
}

.desc {
  margin-bottom: 15px;
}

.contacts {
  margin: 30px 0;
}

.link {
  margin: 0 5px;
}

